added logo, github banner to index.html

--- a/index.htm
+++ b/index.htm
@@ -10,11 +10,27 @@
 <script type="text/javascript"> 
   Shadowbox.init({ language: 'en', players: ['img', 'html', 'iframe', 'qt', 'wmp', 'swf', 'flv'] }); 
 </script>
+
+<script type="text/javascript">
+
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-37755449-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  
+  </script>
 </head>
 
 <body>
+<a href="https://github.com/OctoMap" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 <div id="main">
+<img style="float:left;margin:5px;" src="octomap_tree.png" />
 <H1>OctoMap</H1>
 <h2>An Efficient Probabilistic 3D Mapping Framework Based on Octrees</h2>
 
@@ -26,7 +42,7 @@ The map implementation is based on an octree and is designed to meet the followi
 requirements:
 </p>
 
-<ul>
+<ul style="clear:both">
 <li>
 <b>Full 3D model.</b>  The map is able to model arbitrary environments
 without prior assumptions about it. The representation models occupied
