--- a/index.htm
+++ b/index.htm
@@ -139,10 +139,6 @@ Stefan O&szlig;wald, J&ouml;rg M&uuml;ller, Radu Rusu, Raphael Schmitt, and Chri
             <!-- <img src="http://img.youtube.com/vi/hHF3pRWiP7o/3.jpg"> -->
             <img src="vi/octomap2.jpg" alt="Video thumb">
         </a></td>    
-        <td class="youtube"><a href="http://www.youtube.com/v/l6u06j_VsXc&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- willow collision_octomap -->
-            <!-- <img src="http://img.youtube.com/vi/l6u06j_VsXc/2.jpg"> -->
-            <img src="vi/coll.jpg" alt="Video thumb">
-        </a></td>
         <!-- other freiburg projects -->
 
         <td class="youtube"><a href="http://www.youtube.com/v/5o3ABX7xYJU&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=640;height=480"> <!-- rgbdslam -->
@@ -152,6 +148,10 @@ Stefan O&szlig;wald, J&ouml;rg M&uuml;ller, Radu Rusu, Raphael Schmitt, and Chri
         <td class="youtube"><a href="http://www.youtube.com/v/0sFyyKEoB4o&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- quadcopter mapping -->
             <!-- <img src="http://img.youtube.com/vi/0sFyyKEoB4o/2.jpg"> -->
             <img src="vi/quad.jpg" alt="Video thumb">
+        </a></td>
+        <td class="youtube"><a href="http://www.youtube.com/v/srcx7lPoIfw&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- 3D mapping Nao -->
+            <img src="http://img.youtube.com/vi/srcx7lPoIfw/2.jpg" alt="Video thumb"> 
+            <!--<img src="vi/coll.jpg" alt="Video thumb"> -->
         </a></td>
         <!-- <td class="youtube"><a href="http://www.youtube.com/v/_rIAGKA6uS8"> --> <!-- wheelchair mapping -->
         <!--     <img src="http://img.youtube.com/vi/_rIAGKA6uS8/2.jpg"> -->
@@ -178,7 +178,7 @@ Additionally, please cite our new journal paper (supersedes the ICRA 2010 worksh
 <strong>&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based
   on Octrees&quot;</strong> in
 <em>Autonomous Robots</em>, 2013; <a href="http://dx.doi.org/10.1007/s10514-012-9321-0" target="_blank" >DOI: 10.1007/s10514-012-9321-0</a>.
-Software available at <a href="http://octomap.github.com/">http://octomap.github.com//</a>.
+Software available at <a href="http://octomap.github.com">http://octomap.github.com</a>.
 </p>
 <p>BibTeX:</p>
 <pre>@ARTICLE{hornung13auro,
