--- a/index.htm
+++ b/index.htm
@@ -78,7 +78,7 @@ convenient exchange between robots even under bandwidth constraints.
 </ul>
 
 <p>
-Detailed information about the implemented approach and evaluations can be found in the paper <a href="http://www.informatik.uni-freiburg.de/~hornunga/pub/hornung13auro.pdf">OctoMap: An Efficient Probabilistic 3D Mapping Framework Based on Octrees</a>, published in the Autonomous Robots Journal.
+Detailed information about the implemented approach and evaluations can be found in the paper <a href="http://www.informatik.uni-freiburg.de/~hornunga/pub/hornung13auro.pdf">&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based on Octrees&quot; (PDF)</a>, published in the Autonomous Robots Journal.
 </p>
 
 <p>
@@ -172,7 +172,7 @@ The viewer <em>octovis</em> is released under the <a href="http://opensource.org
 
 <h3>Using Octomap?</h3>
 <p>Please let us know if you are using OctoMap, as we are curious to find out how it enables other people's work or research. 
-Additionally, please cite our new journal paper (supersedes the ICRA 2010 workshop version) if you use OctoMap in your research:
+Additionally, please cite our <a href="http://www.informatik.uni-freiburg.de/~hornunga/pub/hornung13auro.pdf">new journal paper</a> (supersedes the ICRA 2010 workshop version) if you use OctoMap in your research:
 </p>
 <p>A. Hornung,. K.M. Wurm, M. Bennewitz, C. Stachniss, and W. Burgard, 
 <strong>&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based
