Add travis build status

--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@ Stefan O&szlig;wald, J&ouml;rg M&uuml;ller, Radu Rusu, Raphael Schmitt, and Chri
 
 <h2>Overview</h2>
 <ul>
-  <li><a href="https://github.com/OctoMap/octomap">OctoMap GitHub repository</a></li>
+  <li><a href="https://github.com/OctoMap/octomap">OctoMap GitHub repository</a> <a href="https://travis-ci.org/OctoMap/octomap"></a><img src="https://travis-ci.org/OctoMap/octomap.png?branch=devel" alt="Build Status" /></a></li>
   <li><a href="https://github.com/OctoMap/octomap/tags">Download source packages</a></li>	
   <li><a href="https://github.com/OctoMap/octomap/wiki/Compilation-and-Installation-of-OctoMap">Installation instructions</a></li>
   <li><a href="http://www.ros.org/wiki/octomap">OctoMap in ROS</a></li>	
