--- a/index.htm
+++ b/index.htm
@@ -30,7 +30,7 @@ _gaq.push(['_trackPageview']);
 <a href="https://github.com/OctoMap" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 <div id="main">
-<img style="float:left;margin:5px;" src="octomap_tree.png" />
+<img style="float:left;margin:5px;" src="octomap_tree.png" alt="octree"/>
 <H1>OctoMap</H1>
 <h2>An Efficient Probabilistic 3D Mapping Framework Based on Octrees</h2>
 
@@ -92,7 +92,7 @@ Stefan O&szlig;wald, J&ouml;rg M&uuml;ller, Radu Rusu, Raphael Schmitt, and Chri
 
 <h2>Overview</h2>
 <ul>
-  <li><a href="https://github.com/OctoMap/octomap">OctoMap GitHub repository</a> <a href="https://travis-ci.org/OctoMap/octomap"></a><img src="https://travis-ci.org/OctoMap/octomap.png?branch=devel" alt="Build Status" /></a></li>
+  <li><a href="https://github.com/OctoMap/octomap">OctoMap GitHub repository</a> <a href="https://travis-ci.org/OctoMap/octomap"><img src="https://travis-ci.org/OctoMap/octomap.png?branch=devel" alt="Build Status" /></a></li>
   <li><a href="https://github.com/OctoMap/octomap/tags">Download source packages</a></li>	
   <li><a href="https://github.com/OctoMap/octomap/wiki/Compilation-and-Installation-of-OctoMap">Installation instructions</a></li>
   <li><a href="http://www.ros.org/wiki/octomap">OctoMap in ROS</a></li>	
