--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@ source distribution</i> for Linux (recommended), Mac OS and Windows.
 It was developed by <a href="http://www.informatik.uni-freiburg.de/~wurm">Kai
 M. Wurm</a> and <a href="http://www.informatik.uni-freiburg.de/~hornunga">Armin
 Hornung</a>, and is currently maintained by Armin Hornung. We would like to thank 
-Stefan O&szlig;wald, J&ouml;rg M&uuml;ller, Radu Rusu, Raphael Schmitt, and Christoph Sprunk for their contributions.
+all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">additional authors</a> for their contributions.
 </p>
 
 <h2>Overview</h2>
