Validator logo only exists on HTTP

--- a/index.htm
+++ b/index.htm
@@ -218,7 +218,7 @@ projects A3-[MultiBot] and A8-[HumanoidSpace].</p>
 </div>
 <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
-        src="https://www.w3.org/Icons/valid-html401"
+        src="http://www.w3.org/Icons/valid-html401"
         alt="Valid HTML 4.01 Transitional" height="31" width="88"></a>
   </p>
   
