Fix Youtube link

--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+ <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
 <html>
 <head>
@@ -106,54 +106,54 @@ all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">
 <h2>Example Projects</h2>
    <table border=0 width=680 class="youtube">
       <tr>                                         <!-- mapping  -->
-      <td class="youtube"><a href="https://www.youtube.com/v/7ZsxJzR14rc&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- campus map -->
+      <td class="youtube"><a href="https://www.youtube.com/embed/7ZsxJzR14rc?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- campus map -->
             <!-- <img src="https://img.youtube.com/vi/7ZsxJzR14rc/2.jpg"> -->
             <img src="vi/campus.jpg" alt="Video thumb">
         </a></td>
 
-        <td class="youtube"><a href="https://www.youtube.com/v/O2TDNJuHMKo&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- fr 079 -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/O2TDNJuHMKo?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- fr 079 -->
             <!-- <img src="https://img.youtube.com/vi/O2TDNJuHMKo/2.jpg"> -->
             <img src="vi/079.jpg" alt="Video thumb">
         </a></td>                                
-        <td class="youtube"><a href="https://www.youtube.com/v/yp0f8-AKvDU&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=640;height=510"> <!-- object mapping -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/yp0f8-AKvDU?autoplay=1" rel="shadowbox;width=640;height=510"> <!-- object mapping -->
         <img src="https://img.youtube.com/vi/yp0f8-AKvDU/3.jpg" alt="Video thumb">
         </a></td>
         <!-- willow garage  -->
-        <td class="youtube"><a href="https://www.youtube.com/v/uiIi2rSKWAU&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=640;height=480"> <!-- nao localization -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/v/uiIi2rSKWAU?autoplay=1" rel="shadowbox;width=640;height=480"> <!-- nao localization -->
         <img src="https://img.youtube.com/vi/uiIi2rSKWAU/2.jpg" alt="Video thumb">
         </a></td>
-        <td class="youtube"><a href="https://www.youtube.com/v/9f32FmbtHCs&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=640;height=480"> <!-- color octomap demo -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/9f32FmbtHCs?autoplay=1" rel="shadowbox;width=640;height=480"> <!-- color octomap demo -->
             <!-- <img src="https://img.youtube.com/vi/9f32FmbtHCs/2.jpg"> -->
             <img src="vi/cot.jpg" alt="Video thumb">
         </a></td>
       </tr>
 
       <tr> 
-      <td class="youtube"><a href="https://www.youtube.com/v/sot6gjj3SzU&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- willow 3d nav -->
+      <td class="youtube"><a href="https://www.youtube.com/embed/sot6gjj3SzU?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- willow 3d nav -->
       <img src="vi/3dnav.jpg" alt="Video thumb">
             <!-- <img src="https://img.youtube.com/vi/sot6gjj3SzU/3.jpg"> -->
         </a></td>
         <td class="youtube">
-<!-- <a href="https://www.youtube.com/v/hHF3pRWiP7o&rel=1&autoplay=1" rel="shadowbox;width=810;height=480"> -->
-<a href="https://www.youtube.com/v/25nnJ64ED5Q&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- willow octomap2 -->
+<!-- <a href="https://www.youtube.com/embed/hHF3pRWiP7o&rel=1&autoplay=1" rel="shadowbox;width=810;height=480"> -->
+<a href="https://www.youtube.com/embed/25nnJ64ED5Q?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- willow octomap2 -->
             <!-- <img src="https://img.youtube.com/vi/hHF3pRWiP7o/3.jpg"> -->
             <img src="vi/octomap2.jpg" alt="Video thumb">
         </a></td>    
         <!-- other freiburg projects -->
 
-        <td class="youtube"><a href="https://www.youtube.com/v/5o3ABX7xYJU&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=640;height=480"> <!-- rgbdslam -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/5o3ABX7xYJU?autoplay=1" rel="shadowbox;width=640;height=480"> <!-- rgbdslam -->
             <!-- <img src="https://img.youtube.com/vi/5o3ABX7xYJU/2.jpg"> -->
             <img src="vi/cot2.jpg" alt="Video thumb">
         </a></td>        
-        <td class="youtube"><a href="https://www.youtube.com/v/0sFyyKEoB4o&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- quadcopter mapping -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/0sFyyKEoB4o?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- quadcopter mapping -->
             <!-- <img src="https://img.youtube.com/vi/0sFyyKEoB4o/2.jpg"> -->
             <img src="vi/quad.jpg" alt="Video thumb">
         </a></td>
-        <td class="youtube"><a href="https://www.youtube.com/v/srcx7lPoIfw&amp;rel=1&amp;autoplay=1" rel="shadowbox;width=810;height=480"> <!-- 3D mapping Nao -->
+        <td class="youtube"><a href="https://www.youtube.com/embed/srcx7lPoIfw?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- 3D mapping Nao -->
             <img src="https://img.youtube.com/vi/srcx7lPoIfw/2.jpg" alt="Video thumb"> 
             <!--<img src="vi/coll.jpg" alt="Video thumb"> -->
         </a></td>
-        <!-- <td class="youtube"><a href="https://www.youtube.com/v/_rIAGKA6uS8"> --> <!-- wheelchair mapping -->
+        <!-- <td class="youtube"><a href="https://www.youtube.com/embed/_rIAGKA6uS8"> --> <!-- wheelchair mapping -->
         <!--     <img src="https://img.youtube.com/vi/_rIAGKA6uS8/2.jpg"> -->
         <!-- </a></td> -->
       </tr>
