Fix outdated links

--- a/index.htm
+++ b/index.htm
@@ -65,14 +65,14 @@ convenient exchange between robots even under bandwidth constraints.
 </ul>
 
 <p>
-Detailed information about the implemented approach and evaluations can be found in the paper <a href="http://www.informatik.uni-freiburg.de/~hornunga/pub/hornung13auro.pdf">&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based on Octrees&quot; (PDF)</a>, published in the Autonomous Robots Journal.
+Detailed information about the implemented approach and evaluations can be found in the paper <a href="http://www.arminhornung.de/Research/pub/hornung13auro.pdf">&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based on Octrees&quot; (PDF)</a>, published in the Autonomous Robots Journal.
 </p>
 
 <p>
 The OctoMap library is available as a <i>self-contained
 source distribution</i> for Linux (recommended), Mac OS and Windows. 
-It was developed by <a href="http://www.informatik.uni-freiburg.de/~wurm">Kai
-M. Wurm</a> and <a href="http://www.informatik.uni-freiburg.de/~hornunga">Armin
+It was developed by <a href="http://www.kaiwurm.de/">Kai
+M. Wurm</a> and <a href="http://www.arminhornung.de/">Armin
 Hornung</a>, and is currently maintained by Armin Hornung. We would like to thank 
 all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">additional authors</a> for their contributions.
 </p>
