Fix links to octomap.github.io

--- a/index.htm
+++ b/index.htm
@@ -165,7 +165,7 @@ Additionally, please cite our <a href="http://www.informatik.uni-freiburg.de/~ho
 <strong>&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based
   on Octrees&quot;</strong> in
 <em>Autonomous Robots</em>, 2013; <a href="http://dx.doi.org/10.1007/s10514-012-9321-0" target="_blank" >DOI: 10.1007/s10514-012-9321-0</a>.
-Software available at <a href="http://octomap.github.com">http://octomap.github.com</a>.
+Software available at <a href="https://octomap.github.io">https://octomap.github.io</a>.
 </p>
 <p>BibTeX:</p>
 <pre>@ARTICLE{hornung13auro,
@@ -175,9 +175,9 @@ Software available at <a href="http://octomap.github.com">http://octomap.github.
   on Octrees},
   journal = {Autonomous Robots},
   year = 2013,
-  url = {http://octomap.github.com},
+  url = {https://octomap.github.io},
   doi = {10.1007/s10514-012-9321-0},
-  note = {Software available at \url{http://octomap.github.com}}
+  note = {Software available at \url{https://octomap.github.io}}
 }</pre>
 
 
