Add link to  index.htm

--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,7 @@ all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">
 	
 </ul>
 
-<h2>Example Projects</h2>
+<h2>Example Projects and further references</h2>
    <table border=0 width=680 class="youtube">
       <tr>                                         <!-- mapping  -->
       <td class="youtube"><a href="https://www.youtube.com/embed/7ZsxJzR14rc?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- campus map -->
@@ -146,7 +146,9 @@ all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">
       </tr>
 
     </table>
-
+<ul>
+  <li><a href="http://graphics.ewha.ac.kr/octomap-rt/">OctoMap-RT</a> - a GPU-accelerated ray tracing variant of OctoMap</li>
+</ul>
 
 <h2>License</h2>
 <p>
