--- a/index.htm
+++ b/index.htm
@@ -79,7 +79,7 @@ all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">
 
 <h2>Overview</h2>
 <ul>
-  <li><a href="https://github.com/OctoMap/octomap">OctoMap GitHub repository</a> <a href="https://travis-ci.org/OctoMap/octomap"><img src="https://travis-ci.org/OctoMap/octomap.png?branch=devel" alt="Build Status" /></a></li>
+  <li><a href="https://github.com/OctoMap/octomap">OctoMap GitHub repository</a> </li>
   <li><a href="https://github.com/OctoMap/octomap/tags">Download source packages</a></li>	
   <li><a href="https://github.com/OctoMap/octomap/wiki/Compilation-and-Installation-of-OctoMap">Installation instructions</a></li>
   <li><a href="https://www.ros.org/wiki/octomap">OctoMap in ROS</a></li>	
@@ -91,6 +91,11 @@ all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">
 </ul>
 
 <h2>Example Projects and further references</h2>
+<ul>
+  <li><a href="http://graphics.ewha.ac.kr/octomap-rt/">OctoMap-RT</a> - a GPU-accelerated ray tracing variant of OctoMap</li>
+  <li><a href="https://github.com/Spinkoo/pyoctomap">PyOctoMap</a> - Python bindings for OctoMap</li>
+</ul>
+	
    <table border=0 width=680 class="youtube">
       <tr>                                         <!-- mapping  -->
       <td class="youtube"><a href="https://www.youtube.com/embed/7ZsxJzR14rc?autoplay=1" rel="shadowbox;width=810;height=480"> <!-- campus map -->
@@ -146,9 +151,7 @@ all <a href="https://github.com/OctoMap/octomap/blob/devel/octomap/AUTHORS.txt">
       </tr>
 
     </table>
-<ul>
-  <li><a href="http://graphics.ewha.ac.kr/octomap-rt/">OctoMap-RT</a> - a GPU-accelerated ray tracing variant of OctoMap</li>
-</ul>
+
 
 <h2>License</h2>
 <p>
@@ -161,7 +164,7 @@ The viewer <em>octovis</em> is released under the <a href="http://opensource.org
 
 <h3>Using Octomap?</h3>
 <p>Please let us know if you are using OctoMap, as we are curious to find out how it enables other people's work or research. 
-Additionally, please cite our <a href="http://www.informatik.uni-freiburg.de/~hornunga/pub/hornung13auro.pdf">new journal paper</a> (supersedes the ICRA 2010 workshop version) if you use OctoMap in your research:
+Additionally, please cite our <a href="https://www.arminhornung.de/Research/pub/hornung13auro.pdf">journal paper</a> (supersedes the ICRA 2010 workshop version) if you use OctoMap in your research:
 </p>
 <p>A. Hornung,. K.M. Wurm, M. Bennewitz, C. Stachniss, and W. Burgard, 
 <strong>&quot;OctoMap: An Efficient Probabilistic 3D Mapping Framework Based
